fixed about page white gape

--- a/css/styles.css
+++ b/css/styles.css
@@ -475,7 +475,7 @@ background-repeat: repeat-x;
     width: 150px;
 }
 .coded_image{
-    width: 400px;
+    width: 380px;
 }
 
 
